kubernetes/monitoring/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssl-redirect
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  type: NodePort
  ports:
    - name: use-annotation
      port: 80
      targetPort: use-annotation
