kubernetes/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:783764578905:certificate/36b1d0b3-f1f0-47eb-9901-ce4f68a84775
    # HTTP to HTTPS redirect
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: grafana.cave-jarvis.com # Hostname of Grafana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-grafana
                port:
                  number: 80
    - host: prometheus.cave-jarvis.com # Hostname of Prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-kube-prometheus-sta-prometheus
                port:
                  number: 9090
    - http: # This rule handles HTTP traffic for all other hosts and redirects to HTTPS
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
  tls:
  - hosts:
    - "*.cave-jarvis.com"
